Terminada serialización wao